--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1 {
     background-color: cadetblue;
     display: flex;
     justify-content: space-between;
+    border: solid;
 }
 
 .site-description{
@@ -34,4 +35,36 @@ p,h2{
 }
 body{
     background-color: #808080;
+}
+
+.menu a{
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.item{
+    position: relative;
+}
+
+.item p{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+
+.item:hover p{
+    opacity: 1;
+}
+
+.item:hover img{
+    opacity: 0.3333;
+}
+
+a:link{
+    color: red;
+}
+a:visited{
+    color: green;
 }
